<resources>
    <string name="app_name">NetRunner</string>
    <string name="title_fragment_url">URL encoding</string>
    <string name="title_fragment_base64">Base64 encoding</string>
    <string name="title_fragment_md5">MD5 calculation</string>
    <string name="title_fragment_timestamp"> Timestamp conversion</string>
    <string name="title_fragment_ping">PING test</string>
    <string name="title_VPN">VPN</string>
    <string name="ssl">SSL</string>
    <string name="unknown">Unknown</string>
    <string name="title_capture">capture</string>
    <string name="title_request"> request</string>
    <string name="title_tool"> tool</string>
    <string name="edit_title"> request line</string>
    <string name="edit_header_title">request header</string>
    <string name="edit_body_title">request body</string>
    <string name="edit_url"> link</string>
    <string name="edit_user_agent">User-Agent</string>
    <string name="edit_content_type">Content-Type</string>
    <string name="edit_body">body</string>
    <string name="edit_code"> content to be encoded/decoded</string>
    <string name="edit_md5"> content</string>
    <string name="edit_timestamp"> timestamp</string>
    <string name="edit_ping">Host</string>
    <string name="request"> Request</string>
    <string name="response"> Response</string>
    <string name="title_activity_response">Response</string>
    <string name="tab_text_1"> response header</string>
    <string name="tab_text_2"> response body</string>
    <string name="btn_code"> encoding</string>
    <string name="btn_decode"> Decoding</string>
    <string name="btn_compute"> calculation </string>
    <string name="btn_ping">PING</string>
    <string name="btn_add"> add fields</string>
    <string name="add_alert_title"> please enter the field name</string>
    <string name="ok"> OK</string>
    <string name="cancel">cancel</string>
    <string name="reset"> reset field </string>
    <string name="title_menu_clear">clear cache</string>
    <string name="cache_cleared_tip"> cache has been cleared </string>
    <string name="loading">loading...</string>
    <string name="url_empty_tip"> link cannot be empty </string>
    <string name="url_illegal_tip"> link format is incorrect </string>
    <string name="request_fail_tip"> request failed: </string>
    <string name="illegal_header_tip"> There is an illegal value in the header field</string>
    <string name="empty_tip"> no data</string>
    <string name="load"> is sending</string>
    <string name="vpn_is_off">vpn is OFF</string>
    <string name="vpn_is_on">vpn is ON</string>
    <string name="vpn_image">vpn_image</string>
    <string name="night_mode">Night mode</string>
    <string name="data_icon">data icon</string>
    <string name="request_button">request button</string>
    <string name="app_icon">app icon</string>
    <string name="title_fragment_packet">Packet detail</string>
</resources>
